# fejix

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE.txt  README.md  README.rst  meson.build  meson.options
docs/: Doxyfile  Makefile  README.md  README.rst  TODO.md  architecture.rst  basics.rst  build.rst  changelog.rst  conf.py  core.rst  development.rst  doxygen.conf  feature-support.rst  features-and-plans.rst  index.rst  quick-start.rst  reference.rst  requirements.txt  tutorials.rst  version.py  version.py.in
docs/_templates/: page.html
docs/custom/: styles.css
docs/notes/: client_lifecycle.md  code_style.md
docs/pages/: 000-index.dox  003-build.dox  010-tutorial.dox  020-architecture.dox  100-backends.dox  100-contribute.dox  100-contributing.dox  100-development.dox  100-macro-magic.dox  build.dox  changelog.rst  platforms-features.rst
docs/reference/: app.rst  base.rst  index.rst  platform.rst
docs/templates/: footer.html  header.html  layout.xml
examples/: README.md
examples/001_sys/: CMakeLists.txt  main.c  printer.c  printer.h  printer_configurator.c  printer_configurator.h
include/fejix/: any.h  app.h  app_activity_flags.h  app_activity_hints.h  app_manual_sleep.h  backend.h  base.h  builtin_implementations.h  builtin_providers.h  bus.h  client.h  core.h  dev.h  display.h  dynamic_image_set.h  error.h  ext.h  fejix.h  gprotocol.h  hash.h  helper.h  idlist.h  image_consumer.h  image_container.h  image_scene.h  image_scene_activity_hints.h  image_scene_composition.h  image_scene_identity.h  image_scene_layout.h  image_scene_layout_trigger.h  image_scene_sync.h  image_set.h  implementation.h  interaction.h  internal_prelude.h  io.h  list.h  malloc.h  map.h  opengl.h  (+20 more)
notes/: coding-guidelines.md
spec/: opengl.json  timer.json
src/: api_fallbacks.c  backend.c  base.c  build.cmake  builtin_implementations.c  builtin_providers.c  client.c  client.h  core.c  helpers.c  implementation.c  internal_prelude.h  io.c  main.c  module_methods.c  modules_all.h  modules_begin.h  modules_default.c  modules_end.h  platform.c
src/archive/: map.c  map.h
src/common/: app.c  implementation.c  ram.c
src/core/: alloc.c  any.c  base.c  build.cmake  bus.c  client.c  client.h  error.c  ext.c  geometry.c  hash.c  helper.c  idlist.c  implementation.c  library.c  list.c  malloc.c  map.c  object.c  protocol.c  sys.c  utils.c  vec.c  vector.c
src/default/: build.cmake  default.c
src/ext/: helper.c
src/fdpoll/: fdpoll.c  fdpoll.h
src/generic/: client.c  client.h  implementation.c  ram.c  shell.c  shell.h  softer.c
src/headers/: build.cmake
src/interface/: implementation.c  softer.c  wrapper.h
src/loader/: build.cmake  loadable.h  loader-posix.c  loader-winapi.c  loader.c  loader.h
src/modules/: begin.h  build.cmake  client.c  default.c  end.h
src/noop/: bus.c  implementation.c
src/unix/: build.cmake  events.c  events.h  shared_memory.c  shared_memory.h
src/unixbase/: poll.c  poll.h  shm.c  shm.h
src/unixpoller/: unixpoller.c  unixpoller.h
src/unixshm/: unixshm.c  unixshm.h
src/unixshm_buffer/: unixshm_buffer.c  unixshm_buffer.h
src/utils/: build.cmake  logging.c  math.c  memory.c  vector.c
src/wayland/: bus.c  bus.h  implementation.c  implementation.h
src/winapi/: build.cmake  bus.c  bus.h  client.c  client.h  implementation.c  modules.c  protocol.c  protocol.h  utils.c  utils.h
src/windowsapi/: build.cmake
src/x11/: app.c  app.h  backend.c  build.cmake  client.c  client.h  modules.c  platform.c  window.c  window.h  x11.c  (+1 more)
subprojects/core/: base.c  meson.build  utils.c
subprojects/default/: meson.build
subprojects/default/autogen/: app.c  app_activity_flags.c  app_manual_sleep.c  image_consumer.c  implementation.c  opengl.c  ram.c  scene.c  scene_activity_flags.c  scene_blending.c  scene_identity.c  scene_layer.c  scene_layout.c  scene_layout_input.c  scene_layout_size.c  scene_role.c  scene_sync.c  vulkan.c
subprojects/default/src/autogen/: app-since-v0.0.1.c  app.c  app_activity_flags-since-v0.0.1.c  app_activity_flags.c  app_manual_sleep-since-v0.0.1.c  app_manual_sleep.c  image-since-v0.0.1.c  image_consumer.c  implementation-since-v0.0.1.c  implementation.c  opengl.c  ram-since-v0.0.1.c  ram.c  scene.c  scene_activity_flags.c  scene_blending.c  scene_identity.c  scene_layer.c  scene_layout.c  scene_layout_input.c  scene_layout_size.c  scene_role.c  scene_sync.c  vulkan.c
subprojects/headers/: meson.build
subprojects/headers/fejix/core/: base.h  primitives.h  utils.h  vec.h
subprojects/headers/fejix/interface/: app.h  app_activity.h  app_manual_sleep.h  app_timer.h  app_trigger.h  image.h  image_consumer.h  implementation.h  ram.h  view.h  view_activity.h  view_activity_flags.h  view_layout.h
subprojects/headers/fejix/loader/: loader.h
subprojects/loader/: loader.c  meson.build
subprojects/loader/autogen/: app.c  app_activity_flags.c  app_manual_sleep.c  image_consumer.c  implementation.c  loader.c  opengl.c  ram.c  scene.c  scene_activity_flags.c  scene_blending.c  scene_identity.c  scene_layer.c  scene_layout.c  scene_layout_input.c  scene_layout_size.c  scene_role.c  scene_sync.c  vulkan.c
subprojects/loader/src/: loader-posix.c  loader-winapi.c  loader.c  loader.h
subprojects/loader/src/autogen/: app.c  app_activity_flags.c  app_manual_sleep.c  image.c  image_consumer.c  implementation.c  loader.c  opengl.c  ram.c  scene.c  scene_activity_flags.c  scene_blending.c  scene_identity.c  scene_layer.c  scene_layout.c  scene_layout_input.c  scene_layout_size.c  scene_role.c  scene_sync.c  view.c  view_activity_flags.c  view_layout.c  view_layout_size.c  vulkan.c
subprojects/winapi/: meson.build  meson.options  utils.c
subprojects/winapi/app/: app.c  app.h
subprojects/winapi/src/: utils.c  utils.h
subprojects/winapi/src/image_scene/: image_scene.h
tests/: dev.c  test_core_map.c  test_winapi_utils.c  unixshm_buffer.c
tools/: autogen-helpers.py  autogen.py  generate_protocol_headers.py  generate_protocol_headers.sh  protocol_header.h.jinja
(+368 files in other folders)
