option(
    'implementations',
    type: 'array',
    value: [],
    choices: [
        'andk',
        'appkit',
        'wayland',
        'winapi',
        'x11'
    ]
)

option(
    'features',
    type: 'array',
    value: [],
    choices: [
        'softer_canvas',
        'opengl_canvas',
        'vulkan_canvas',
        'directx_canvas',
        'metal_canvas',

        'layer_mapping',
        'layer_nesting',
        'layer_blending',
    ]
)

option('build_tests', type: 'boolean', value: false)