option(
    'implementations',
    type: 'array',
    value: [],
    choices: [
        'andk',
        'cocoa',
        'wayland',
        'winapi',
        'x11'
    ]
)

option(
    'features',
    type: 'array',
    value: [],
    choices: [
        'output',
        'output_mapping',
        'output_nesting',
        'output_blending',

        'softer',
        'opengl',
        'vulkan',
        'directx',
        'metal',
    ]
)

option('build_tests', type: 'boolean', value: false)
